app-one/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-first
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: test-first
  ports:
  - name: http
    port: 8080
